3.4 - тесты + метод на отправку сообщений
