# internal/repositories/messages/api.go
@@ -1,0 +1,58 @@
+package messagesrepo
+
+import (
+	"context"
+	"errors"
+
+	"entgo.io/ent/dialect/sql"
+
+	"github.com/keepcalmist/chat-service/internal/store/message"
+	"github.com/keepcalmist/chat-service/internal/types"
+	"github.com/keepcalmist/chat-service/pkg/pointer"
+)
+
+var ErrMsgNotFound = errors.New("message not found")
+
+func (r *Repo) GetMessageByRequestID(ctx context.Context, reqID types.RequestID) (*Message, error) {
+	msg, err := r.db.Message(ctx).
+		Query().
+		Where(
+			message.InitialRequestIDEQ(reqID),
+		).First(ctx)
+
+	if err != nil {
+		return nil, err
+	}
+
+	if msg == nil {
+		return nil, ErrMsgNotFound
+	}
+
+	return pointer.Ptr(adaptStoreMessage(msg)), nil
+}
+
+// CreateClientVisible creates a message that is visible only to the client.
+func (r *Repo) CreateClientVisible(
+	ctx context.Context,
+	reqID types.RequestID,
+	problemID types.ProblemID,
+	chatID types.ChatID,
+	authorID types.UserID,
+	msgBody string,
+) (*Message, error) {
+	err := r.db.Message(ctx).Create().
+		SetInitialRequestID(reqID).
+		SetProblemID(problemID).
+		SetChatID(chatID).
+		SetAuthorID(authorID).
+		SetBody(msgBody).
+		SetIsVisibleForClient(true).
+		OnConflict(sql.DoNothing()).
+		Exec(ctx)
+
+	if err != nil {
+		return nil, err
+	}
+
+	return r.GetMessageByRequestID(ctx, reqID)
+}
